--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,22 @@
 }
 
 .section{
-  min-height: 100vh;
+  height: 100vh;
   width: 100%;
   position: absolute;
   z-index: 200;
   top: 0;
   left: 0;
   visibility: hidden;
+  overflow-x: hidden;
+}
+
+.centering-div{
+  max-width: 1800px;
+  width: 100%;
+  margin: 0 auto;
+  height: 100%;
+  position: relative;
 }
 
 .floating-right{
@@ -167,8 +176,8 @@
 /*Cursor*/
 
 #cursor-follower{
-  width: 30px;
-  height: 20px;
+  width: 32px;
+  height: 18px;
   z-index: 1000;
   pointer-events: none;
   position: fixed;
