--- a/src/Components/MobileNavbar.scss
+++ b/src/Components/MobileNavbar.scss
@@ -1,4 +1,10 @@
 .MobileNavbar{
+
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+
   .openButton{
     width: 4.5rem;
     height: 4rem;
@@ -17,18 +23,43 @@
   }
 
   .navbar{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    position: relative;
+    height: 4rem;
+
+    background: rgba( 12, 12, 12, 0.25 );
+    box-shadow: 0 8px 32px 0 rgba( 12, 12, 12, 0.37 );
+    backdrop-filter: blur( 10px );
+    -webkit-backdrop-filter: blur( 10px );
+    border-bottom: 1px solid rgba( 12, 12, 12, 0.18 );
+
+    img{
+      max-width: 12rem;
+      margin-left: .5rem;
+    }
+  }
+
+  .menu{
     width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    background-color: #242424;
+    //background-color: #242424;
     color: white;
     padding: 4rem 0;
     position: fixed;
     top: 0;
-    right: 0;
+    right: -100%;
+
+    background: rgba( 0, 0, 0, 0.10 );
+    backdrop-filter: blur( 10px );
+    -webkit-backdrop-filter: blur( 10px );
+    //border: 1px solid rgba( 255, 255, 255, 0.18 );
 
     ul{
 
@@ -44,6 +75,8 @@
         list-style: none;
         font-size: 2em;
         margin: 1.5rem 0;
+        padding-bottom: 5px;
+        border-bottom: 3px darkred solid;
       }
     }
 
