--- a/src/Components/ReadingMenu.css
+++ b/src/Components/ReadingMenu.css
@@ -13,6 +13,7 @@
     z-index: 300;
     box-shadow: 0px 0px 20px -2px #121212;
     box-sizing: border-box;
+    overflow-y: scroll;
 }
 
 .reading-menu .close{
