--- a/src/Components/Button.scss
+++ b/src/Components/Button.scss
@@ -7,7 +7,7 @@ button{
     font-size: 1.4em;
     padding: 0.6rem 1rem;
     transition: padding .3s;
-    margin-right: 2rem;
+    margin: auto 1rem;
 }
 
 button:hover{
