--- a/src/Components/MobileNavbar.scss
+++ b/src/Components/MobileNavbar.scss
@@ -11,15 +11,27 @@
     height: 4rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-end;
     justify-content: space-between;
     margin: 0 0 0 auto;
     padding: 1rem;
 
     div{
       height: 5px;
-      width: 100%;
       background-color: white;
+      border-radius: 15px;
+
+      &:nth-child(1){
+        width: 85%;
+      }
+
+      &:nth-child(2){
+        width: 100%;
+      }
+
+      &:nth-child(3){
+        width: 70%;
+      }
     }
   }
 
@@ -31,7 +43,7 @@
     position: relative;
     height: 4rem;
 
-    background: rgba( 12, 12, 12, 0.25 );
+    background: rgba( 12, 12, 12, 0.5 );
     box-shadow: 0 8px 32px 0 rgba( 12, 12, 12, 0.37 );
     backdrop-filter: blur( 10px );
     -webkit-backdrop-filter: blur( 10px );
@@ -57,7 +69,7 @@
     top: 0;
     right: -100%;
 
-    background: rgba( 0, 0, 0, 0.10 );
+    background: rgba( 0, 0, 0, 0.50 );
     backdrop-filter: blur( 10px );
     -webkit-backdrop-filter: blur( 10px );
     //border: 1px solid rgba( 255, 255, 255, 0.18 );
@@ -78,13 +90,14 @@
         margin: 1.5rem 0;
         padding-bottom: 5px;
         border-bottom: 3px darkred solid;
+        font-weight: bold;
       }
     }
 
     .close{
       position: absolute;
       top: 1rem;
-      left: 1rem;
+      right: 1rem;
 
       svg{
         fill: white;
