--- a/src/Components/ReadingMenu.css
+++ b/src/Components/ReadingMenu.css
@@ -1,11 +1,21 @@
+.reading-menu-container{
+    position: fixed;
+    inset: 0;
+    display: none;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    background-color: rgba(0,0,0,0);
+}
+
 .reading-menu{
+    position: absolute;
     background-color: #242424;
     color: white;
     width: 100%;
     height: 70vh;
     margin: 0;
     padding: 2rem;
-    position: fixed;
     left: 0;
     bottom: -100%;
     border-top-left-radius: 10px;
