--- a/src/Components/ReadingMenu.css
+++ b/src/Components/ReadingMenu.css
@@ -15,7 +15,7 @@
     width: 100%;
     height: 70vh;
     margin: 0;
-    padding: 2rem;
+    padding: 1rem;
     left: 0;
     bottom: -100%;
     border-top-left-radius: 10px;
@@ -27,7 +27,7 @@
 }
 
 .reading-menu .close{
-    fill: url('#lgrad');
+    fill: darkred;
     height: 2rem;
     width: 2rem;
 }
