--- a/src/Mobile.scss
+++ b/src/Mobile.scss
@@ -24,7 +24,7 @@
       width: 100%;
     }
 
-    img{
+    img, video{
       width: 80%;
       height: auto;
       margin: 0 auto;
@@ -38,6 +38,7 @@
       width: max-content;
       margin: 2rem auto;
       z-index: 1;
+      max-width: 100%;
 
       &:before{
         content: '';
