--- a/src/Components/ReadingMenu.scss
+++ b/src/Components/ReadingMenu.scss
@@ -35,6 +35,7 @@
         position: relative;
         width: max-content;
         margin: 1rem auto;
+       max-width: 100%;
     }
 
      h1:before {
@@ -50,6 +51,7 @@
      h2 {
         border-bottom: 2px solid darkred;
         width: max-content;
+       max-width: 100%;
     }
 
      .close {
