--- a/src/Components/LoadingScreen.scss
+++ b/src/Components/LoadingScreen.scss
@@ -9,6 +9,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    color: white;
 
     .loader-animation{
         position: relative;
