--- a/src/Components/ReadingMenu.scss
+++ b/src/Components/ReadingMenu.scss
@@ -14,7 +14,7 @@
     color: white;
     width: 100%;
     height: 70vh;
-    margin: 0;
+    margin: 0 0 3rem 0;
     padding: 1rem;
     left: 0;
     bottom: -100%;
