--- a/src/Components/ReadingMenu.scss
+++ b/src/Components/ReadingMenu.scss
@@ -14,8 +14,8 @@
     color: white;
     width: 100%;
     height: 70vh;
-    margin: 0 0 3rem 0;
-    padding: 1rem;
+    margin: 0;
+    padding: 1rem 1rem 4rem 1rem;
     left: 0;
     bottom: -100%;
     border-top-left-radius: 10px;
