--- a/src/App.scss
+++ b/src/App.scss
@@ -54,7 +54,7 @@
     left: 5rem;
     top: 4rem;
     z-index: 100;
-    text-shadow: 1px 1px 5px black;;
+    //text-shadow: 1px 1px 5px black;;
   }
 
   .floating-text h1 {
