--- a/src/Components/ReadingMenu.scss
+++ b/src/Components/ReadingMenu.scss
@@ -23,8 +23,12 @@
     z-index: 300;
     box-shadow: 0px 0px 20px -2px #121212;
     box-sizing: border-box;
-    overflow-y: scroll;
 
+    .reading-menu-body{
+      overflow-y: scroll;
+      height: 100%;
+      padding: 2rem 0;
+    }
     /* h1{*/
     /*    border-bottom: darkred 2px solid;*/
     /*    width: max-content;*/
@@ -53,11 +57,24 @@
         width: max-content;
        max-width: 100%;
     }
+  
+    .close-banner{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 3rem;
+      position: absolute;
+      top: 0;
+      background-color: #242424;
+      z-index: 10;
+    }
 
      .close {
         fill: darkred;
         height: 2rem;
         width: 2rem;
+       margin: .5rem 0 0 .5rem;
     }
 
     ul{
