--- a/src/Components/ReadingMenu.scss
+++ b/src/Components/ReadingMenu.scss
@@ -66,8 +66,11 @@
       height: 3rem;
       position: absolute;
       top: 0;
+      left: 0;
       background-color: #242424;
       z-index: 10;
+      border-top-left-radius: 10px;
+      border-top-right-radius: 10px;
     }
 
      .close {
