--- a/src/Components/ReadingMenu.scss
+++ b/src/Components/ReadingMenu.scss
@@ -28,6 +28,11 @@
       overflow-y: scroll;
       height: 100%;
       padding: 2rem 0;
+
+      img{
+        max-width: 100%;
+        height: auto;
+      }
     }
     /* h1{*/
     /*    border-bottom: darkred 2px solid;*/
